tests/golden/type_errors/array_map_non_function.cd
map([1], 42);
