tests/golden/type_errors/array_map_non_function.err
Type error at 1:12: map expects function as second argument, got number
  map([1], 42);
             ^
